--- a/A_dbms/templates/dbms/dun/dun-stage.html
+++ b/A_dbms/templates/dbms/dun/dun-stage.html
@@ -10,7 +10,7 @@
 <body>
 <div class="contain">
     <div class="btl">
-        <p>出现项目入库资料清单</p>
+        <p>追偿项目入库资料清单</p>
     </div>
     <div class="notice-body">
         <table style="width: 100%; border-collapse:collapse;" cellspacing="0" cellpadding="0">
@@ -173,6 +173,15 @@
                         </tr>
                     {% endfor %}
                 {% endif %}
+                </tbody>
+            </table>
+            <table style="width: 100%;">
+                <tbody>
+                <tr>
+                    <td style="width: 35%">移交人：</td>
+                    <td style="width: 35%">接收人：</td>
+                    <td>监交人：</td>
+                </tr>
                 </tbody>
             </table>
         </div>
