--- a/A_dbms/templates/dbms/dun/dun_scan/dun-summry-body.html
+++ b/A_dbms/templates/dbms/dun/dun_scan/dun-summry-body.html
@@ -7,6 +7,6 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     回收金额：{{ dun_obj.dun_retrieve_sun }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    剩余金额：{{ dun_obj.dun_balance }}</label>
+    剩余本金：{{ dun_obj.dun_balance }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     状态：{{ dun_obj.get_dun_stage_display }}</label>
