--- a/A_dbms/templates/dbms/report/balance_article/balance-class-organization.html
+++ b/A_dbms/templates/dbms/report/balance_article/balance-class-organization.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>{{ PAGE_TITLE }}统计表（按法律顾问）</caption>
+        <caption>{{ PAGE_TITLE }}统计表（按法律顾问）（{{ tf_r }}至{{ tl_r }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>法律顾问</th>
