--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -5,6 +5,7 @@
             <th>客户名称({{ custom_acount }})</th>
             <th>行业</th>
             <th>管户经理</th>
+            <th>风控专员</th>
             <th>授信总额</th>
             <th>在保余额</th>
 {#            <th>流贷余额</th>#}
@@ -28,6 +29,7 @@
                 {% endif %}
                 <td>{{ custom.idustry.name }}</td>
                 <td align="right">{{ custom.managementor }}</td>
+                <td align="right">{{ custom.controler }}</td>
                 <td align="right">{{ custom.credit_amount }}</td>
                 <td align="right">{{ custom.amount }}</td>
 {#                <td align="right">{{ custom.custom_flow }}</td>#}
