--- a/A_dbms/templates/dbms/warrant/overdu_evaluate/overdu-evaluate-table.html
+++ b/A_dbms/templates/dbms/warrant/overdu_evaluate/overdu-evaluate-table.html
@@ -9,7 +9,7 @@
             <th>评估情况</th>
             <th>评估价值</th>
             <th>评估日期</th>
-            <th>所属项目</th>
+            <th>所属项目次序</th>
             <th>项目状态</th>
         </tr>
         </thead>
@@ -48,9 +48,9 @@
                 <td>{{ warrant.evaluate_date|default_if_none:'' }}</td>
                 <td>
                     <a href="{% url 'dbms:article_scan_lending' article_id=warrant.lending_warrant.all.0.sure.lending.summary.id lending_id=warrant.lending_warrant.all.0.sure.lending.id %}">
-                        {{ warrant.lending_warrant.all.0.sure.lending.summary }}</a>
+                        {{ warrant.lending_warrant.all.0.sure.lending }}</a>
                 </td>
-                <td>{{ warrant.lending_warrant.all.0.sure.lending.summary.get_article_state_display }}</td>
+                <td>{{ warrant.lending_warrant.all.0.sure.lending.get_lending_state_display }}</td>
             </tr>
         {% endfor %}
         </tbody>
