--- a/A_dbms/templates/dbms/warrant/modl/mod_form/stockes-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/stockes-add-edit.html
@@ -46,5 +46,10 @@
         <div class="col-sm-9">{{ form_stockes_add_edit.stock_typ }}</div>
         <label id="e_stock_typ" class="pull-right">{{ form_stockes_add_edit.stock_typ.errors }}</label>
     </div>
+    <div class="form-group"><!--备注-->
+        <label for="id_remark" class="col-sm-3 control-label">{{ form_stockes_add_edit.remark.label }}：</label>
+        <div class="col-sm-9">{{ form_stockes_add_edit.remark }}</div>
+        <label id="e_remark" class="pull-right">{{ form_stockes_add_edit.remark.errors }}</label>
+    </div>
 
 </div>
