--- a/A_dbms/templates/dbms/agree/preview-agree.html
+++ b/A_dbms/templates/dbms/agree/preview-agree.html
@@ -24,6 +24,8 @@
                 {% include 'dbms/agree/agree_board/entrust-maximum.html' %}
             {% elif agree_typ == 3 %}
                 <p>？？？？？？？？？尚未添加保函委托合同模板？？？？？？？？？？？？？？</p>
+            {% elif agree_typ == 4 %}
+                <p>？？？？？？？？？无需委托保证合同？？？？？？？？？？？？？？</p>
             {% elif agree_typ == 7 %}
                 <p>？？？？？？？？？尚未添加小贷借款合同模板？？？？？？？？？？？？？？</p>
             {% elif agree_typ == 41 %}
