--- a/A_dbms/templates/dbms/agree/preview-counter.html
+++ b/A_dbms/templates/dbms/agree/preview-counter.html
@@ -41,6 +41,8 @@
             {% endif %}
         {% elif agree_typ == 3 %}
             <p>！！！！！！！agree_typ == 3还未添加合同模板，请联系系统管理员！！！！！！！</p>
+        {% elif agree_typ == 4 %}
+            <p>！！！！！！！agree_typ == 4还未添加合同模板，请联系系统管理员！！！！！！！</p>
         {% elif agree_typ == 7 %}
             <p>！！！！！！！agree_typ == 7还未添加合同模板，请联系系统管理员！！！！！！！</p>
         {% elif agree_typ == 41 %}
