--- a/A_dbms/templates/dbms/dun/dun-seal-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-seal-scan.html
@@ -3,14 +3,13 @@
 {% block title %}{{ PAGE_TITLE }}:{{ dun_obj }}{% endblock %}
 
 {% block right-content-container %}
-
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/dun/seal_scan/dun-seal-summry.html' %}
         {% include 'dbms/dun/seal_scan/dun-seal-tab.html' %}
-
+        {% include 'dbms/dun/modl/dun-sealup-del-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
-
+    {% include 'dbms/dun/extra/js-dun-sealup-del.html' %}
 {% endblock %}
