--- a/A_dbms/templates/dbms/dun/dun-stage.html
+++ b/A_dbms/templates/dbms/dun/dun-stage.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ article_obj.article_num }}</title>
+    <title>{{ dun_obj.title }}</title>
     <link rel="stylesheet" media="screen" href="{% static 'dbms/css/dun-stage-style.css' %}">
     <link rel="stylesheet" media="print" href="{% static 'dbms/css/dun-stage-style.css' %}">
 </head>
