--- a/A_dbms/templates/dbms/agree/agree_board/sign-approval-order.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-approval-order.html
@@ -5,7 +5,7 @@
 <tr>
     <td align="center">贷款银行</td>
     <td align="center">{{ agree_obj.branch }}</td>
-    <td>贷款金额</td>
+    <td>合同金额</td>
     <td align="center">{{ agree_amount_str }}万元</td>
     <td align="center">期限</td>
     <td align="center">{{ credit_term_cn }}</td>
