--- a/A_dbms/templates/dbms/article/modl/article-agree-add-mod.html
+++ b/A_dbms/templates/dbms/article/modl/article-agree-add-mod.html
@@ -13,6 +13,7 @@
             <div class="modal-body">
                 <form class="form-horizontal">
                     {% include 'dbms/article/modl/mod_form/article-agree-add.html' %}
+                    {% include 'dbms/article/modl/mod_form/article-agree-letter-add.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
