--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
@@ -10,7 +10,7 @@
 
     function bindAddWarrant() {
         $('#addWarrant').click(function () {
-            console.log("bindAddWarrant")
+            console.log("bindAddWarrant");
             $('#addWarrantModal').modal('show');
         })
     }
