--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home.html
@@ -14,8 +14,11 @@
         {% include 'dbms/agree/agree_board/counter/_c/counter-home-y.html' %}
     </div>
     <div class="page-home-b">
-        <p><strong>借款人（丙方）：{{ agree_obj.lending.summary.custom.name }}</strong></p>
+        <p><strong>{{ counter_home_b_b }}（丙方）：{{ agree_obj.lending.summary.custom.name }}</strong></p>
         <p>住所（地址）：{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</p>
         <p>法定代表人：{{ agree_obj.lending.summary.custom.company_custome.representative }}</p>
     </div>
+    {% if agree_typ == 22 %}
+        <p style="text-indent: 26pt;padding-top: 35pt"><strong>声明：乙丙双方已阅读本合同所有条款。应乙丙双方要求，甲方已经就本合同做了相应的条款说明。乙丙双方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。</strong></p>
+    {% endif %}
 </div>
