--- a/A_dbms/static/dbms/css/summary-style.css
+++ b/A_dbms/static/dbms/css/summary-style.css
@@ -1,9 +1,9 @@
 body {
     padding-top: 3pt;
-    font-family: 仿宋;
 }
 
 .contain {
+    font-family: 仿宋;
     /*页面宽度 */
     width: 210mm;
     /*左空白*/
@@ -80,6 +80,76 @@ body {
     border-left: 2pt solid black;
 }
 
-table{
+table {
     width: 100%;
+}
+
+/*换页打印*/
+.split {
+    page-break-after: always;
+}
+
+
+.contain-t {
+    font-family: SimSun;
+    /*宽度*/
+    width: 210mm;
+    /*左空白*/
+    margin-left: auto;
+    /*又空白*/
+    margin-right: auto;
+    /*字体大小*/
+    font-size: 16pt;
+    /*背景色*/
+    /*background-color: #dddddd;*/
+    /*字间距*/
+    letter-spacing: 0pt;
+    /*行间距#}*/
+    line-height: 35pt;
+    /*background-image: url("../images/agree_dark_line.png");*/
+    /*background-repeat: repeat-y;*/
+}
+
+.headline-t {
+    text-align: center;
+    font-weight: bolder;
+    line-height: 18pt;
+    padding-top: 50pt;
+    /*color: red;*/
+    margin-bottom: 20pt;
+}
+
+.headline-1 {
+    font-size: 28pt;
+    margin-bottom: 18pt;
+    font-weight: bolder;
+    color: red;
+    transform: scale(1, 3);
+}
+
+.headline-2-d {
+    padding-top: 30pt;
+    font-size: 22pt;
+    font-weight: bolder;
+    color: #cc00cc;
+}
+
+.headline-2-r {
+    padding-top: 30pt;
+    font-size: 22pt;
+    font-weight: bolder;
+    color: red;
+}
+
+.tbp {
+    text-align: justify;
+    text-justify: distribute;
+    text-align-last: left;
+    -moz-text-align-last: left; /* 针对 Firefox 的代码 */
+}
+
+/*{#tr td {#}*/
+/*{#    border: 1px solid black;#}*/
+.bb2 {
+    border: 2pt solid black;
 }
