--- a/A_dbms/templates/dbms/appraisal/summary/summary-sign.html
+++ b/A_dbms/templates/dbms/appraisal/summary/summary-sign.html
@@ -7,7 +7,7 @@
 </tr>
 <tr class="bb">
     <td class="bb">审保会召集人审核意见</td>
-    <td class="bb" colspan="4"><br><br><br><br>
+    <td class="bb" colspan="4"><br><br><br>
         <span style="padding-left: 300pt">签字：</span><br><br>
         <span style="padding-left: 300pt">日期：</span>
     </td>
