--- a/A_dbms/templates/dbms/agree/scan/tab/agree-result.html
+++ b/A_dbms/templates/dbms/agree/scan/tab/agree-result.html
@@ -30,7 +30,7 @@
                     <a class="btn btn-primary btn-xs scanResultB" target="_blank"
                        href="{% url 'dbms:agree_result_preview' agree_id=agree_obj.id  result_id=result.id %}">预览</a>
                     <a class="btn btn-primary btn-xs delResultB">删除</a>
-                    <a class="btn btn-primary btn-xs scanResultB" target="_blank"
+                    <a class="btn btn-danger btn-xs scanResultB" target="_blank"
                        href="https://www.tianyancha.com/search?key={{ result.custom.name }}">天眼查</a>
                 </td>
             <tr>
