--- a/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
@@ -5,6 +5,12 @@
         <label id="e_custom_id" class="pull-right">{{ form_article_add_edit.custom_id.errors }}</label>
     </div>
 
+    <div class="form-group"><!--业务品种-->
+        <label for="id_product_id" class="col-sm-3 control-label">{{ form_article_add_edit.product_id.label }}：</label>
+        <div class="col-sm-9">{{ form_article_add_edit.product_id }}</div>
+        <label id="e_product_id" class="pull-right">{{ form_article_add_edit.product_id.errors }}</label>
+    </div>
+
     <div class="form-group"><!--续贷金额-->
         <label for="id_renewal" class="col-sm-3 control-label">{{ form_article_add_edit.renewal.label }}：</label>
         <div class="col-sm-9">{{ form_article_add_edit.renewal }}</div>
@@ -22,6 +28,13 @@
                class="col-sm-3 control-label">{{ form_article_add_edit.credit_term.label }}：</label>
         <div class="col-sm-9">{{ form_article_add_edit.credit_term }}</div>
         <label id="e_credit_term" class="pull-right">{{ form_article_add_edit.credit_term.errors }}</label>
+    </div>
+
+    <div class="form-group"><!--流程-->
+        <label for="id_credit_term"
+               class="col-sm-3 control-label">{{ form_article_add_edit.process_id.label }}：</label>
+        <div class="col-sm-9">{{ form_article_add_edit.process_id }}</div>
+        <label id="e_credit_term" class="pull-right">{{ form_article_add_edit.process_id.errors }}</label>
     </div>
 
     <div class="form-group"><!--项目经理id-->
