--- a/A_dbms/templates/dbms/custom/modl/mod_form/article-add.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/article-add.html
@@ -1,4 +1,9 @@
 <div id="form_article_add">
+    <div class="form-group"><!--业务品种-->
+        <label for="id_product_id" class="col-sm-3 control-label">{{ form_article_add.product_id.label }}：</label>
+        <div class="col-sm-9">{{ form_article_add.product_id }}</div>
+        <label id="e_product_id" class="pull-right">{{ form_article_add.product_id.errors }}</label>
+    </div>
 
     <div class="form-group"><!--续贷金额-->
         <label for="id_renewal" class="col-sm-3 control-label">{{ form_article_add.renewal.label }}：</label>
@@ -17,6 +22,13 @@
                class="col-sm-3 control-label">{{ form_article_add.credit_term.label }}：</label>
         <div class="col-sm-9">{{ form_article_add.credit_term }}</div>
         <label id="e_credit_term" class="pull-right">{{ form_article_add.credit_term.errors }}</label>
+    </div>
+
+    <div class="form-group"><!--流程-->
+        <label for="id_credit_term"
+               class="col-sm-3 control-label">{{ form_article_add.process_id.label }}：</label>
+        <div class="col-sm-9">{{ form_article_add.process_id }}</div>
+        <label id="e_credit_term" class="pull-right">{{ form_article_add.process_id.errors }}</label>
     </div>
 
     <div class="form-group"><!--项目经理id-->
